sandbox/output
Hiker.java:14: error: cannot find symbol
        return param.replace("\n",",");
               ^
  symbol:   variable param
  location: class Hiker
1 error
